# PELICAN

./: MANIFEST.in  PELICAN.yml  README.md  pyproject.toml  requirements.txt  setup.py
pelican/: __init__.py  cli.py  core.py
pelican/genemarks/: itr_0.lst  log  python_wrapper.py
pelican/genemarks/podman_genemarks/: run_podman.py
pelican/models/: hmm_consensus.py  minmax_scaler.pkl
pelican/test_data/tables_accession_data/: Additional_file_2.xlsx  SeaPhages_data.csv
