[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pelican-annotation"
version = "0.1.5"
description = "Phage gEnome tooL for Inference of Consensus ANotation"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "PELICAN Team"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pandas>=1.3.0",
    "matplotlib>=3.3.0",
    "pyrodigal>=2.0.0",
    "biopython>=1.79",
    "tqdm>=4.62.0",
    "scikit-learn>=1.0.0",
    "mycolorpy>=1.5.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pygenomeviz>=0.4.0",
    "upsetplot>=0.6.0",
    "bcbio-gff>=0.6.9",
    "protpy>=1.0.0",
    "joblib>=1.1.0",
    "torch>=1.9.0",
    "h5py>=3.3.0",
    "transformers>=4.12.0",
]

[project.urls]
Homepage = "https://github.com/FefoRossi/PELICAN"
Repository = "https://github.com/FefoRossi/PELICAN"

[project.scripts]
pelican = "pelican.cli:cli_main"

[tool.setuptools.packages.find]
include = ["pelican*"]

[tool.setuptools.package-data]
pelican = ["databases/*", "models/*"]
